[package]
name = "overseer_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
serde_yaml = "0.8"
service = { path = "../service" }
task = { path = "../task" }
tokio = { version = "1.18", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
