[package]
name = "service"
version = "0.1.0"
edition = "2021"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
readme = "../README.md"
license = "AGPL-3.0-only"
repository = "https://codeberg.org/alpha-tango-kilo/overseer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bollard = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
