[package]
name = "service"
version = "0.1.0"
edition = "2021"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
readme = "../README.md"
license = "AGPL-3.0-only"
repository = "https://codeberg.org/alpha-tango-kilo/overseer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bollard = { version = "0.12", features = ["ssl"] }
camino = { version = "1.0", features = ["serde1"] }
docker-compose-types = "0.2"
indexmap = "1.8" # for use with docker-compose-types
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0"
tracing = "0.1"

[dependencies.tokio]
version = "1.19"
features = [
    "fs",
]
