[package]
name = "task"
version = "0.1.0"
edition = "2021"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
readme = "../README.md"
license = "AGPL-3.0-only"
repository = "https://codeberg.org/alpha-tango-kilo/overseer"

[dependencies]
async-trait = "0.1"
delay_timer = "0.11"
futures = { version = "0.3", default-features = false, features = ["std"] }
is_executable = "1.0"
notify = "=5.0.0-pre.15"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
thiserror = "1.0"
tracing = "0.1"

[dependencies.tokio]
version = "1.18"
features = [
    "fs",
    "process",
    "rt",
    "sync",
]
