[package]
name = "task"
version = "0.1.0"
edition = "2021"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
readme = "../README.md"
license = "AGPL-3.0-only"
repository = "https://codeberg.org/alpha-tango-kilo/overseer"

[dependencies]
async-trait = "0.1"
camino = { version = "1.0", features = ["serde1"] }
delay_timer = "0.11"
futures = { version = "0.3", default-features = false, features = ["std"] }
notify = "=5.0.0-pre.15"
openssh = "0.9"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
thiserror = "1.0"
tracing = "0.1"

[dependencies.tokio]
version = "1.20"
features = [
    "fs",
    "process",
    "rt",
    "sync",
]
